make all the buttons round to be consistent, refactor some file names

--- a/app/src/main/res/layout/activity_functions.xml
+++ b/app/src/main/res/layout/activity_functions.xml
@@ -145,10 +145,10 @@
 
     <Button
         android:id="@+id/saveBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
-        android:background="#87ceeb"
+        android:background="@drawable/control_button_bg"
         android:drawableLeft="@drawable/ic_save"
         android:padding="10dp"
         android:text="Save"
