--- a/app/src/main/res/layout/activity_bluetooth_device.xml
+++ b/app/src/main/res/layout/activity_bluetooth_device.xml
@@ -11,90 +11,98 @@
         android:id="@+id/bluetoothTitleTextView"
         android:layout_width="600dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="80dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="Connect to Robot"
-        android:textSize="36dp"
-        android:textStyle="bold"
-        />
+        android:text="Bluetooth Connection"
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
 
     <Switch
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/toolbar"
         android:layout_marginLeft="25dp"
-        android:text="Bluetooth"
-        android:layout_below="@+id/toolbar"/>
+        android:layout_marginTop="10dp"
+        android:text="Bluetooth" />
 
     <Button
         android:id="@+id/btnFindUnpairedDevices"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/bluetoothTitleTextView"
         android:layout_marginHorizontal="20dp"
+        android:background="@drawable/btn_function_bg"
+        android:drawableLeft="@drawable/ic_scan"
         android:onClick="btnDiscover"
-        android:text="Scan for Nearby Devices" />
+        android:padding="10dp"
+        android:text="Scan"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/btnDiscoverable"
-        android:layout_width="wrap_content"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/bluetoothTitleTextView"
+        android:layout_marginLeft="180dp"
         android:layout_toRightOf="@id/btnStartConnection"
-        android:layout_marginLeft="200dp"
+        android:background="@drawable/btn_function_bg"
+        android:drawableLeft="@drawable/ic_discoverable"
         android:onClick="btnDiscoverable"
-        android:text="Make Discoverable" />
+        android:padding="10dp"
+        android:text="Make Discoverable"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/btnStartConnection"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lvPairedDevices"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:text="Start Connection"
-        android:layout_marginHorizontal="20dp"/>
+        android:background="@drawable/btn_function_bg"
+        android:drawableLeft="@drawable/ic_discoverable"
+        android:padding="10dp"
+        android:text="Connect" />
 
     <ListView
         android:id="@+id/lvNewDevices"
-        android:listSelector="#bdb9b9"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_below="@id/bluetoothNewTextView"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="30dp"/>
+        android:listSelector="#bdb9b9" />
 
     <ListView
         android:id="@+id/lvPairedDevices"
-        android:listSelector="#bdb9b9"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/bluetoothPairedTextView"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="30dp"/>
+        android:listSelector="#bdb9b9" />
 
     <TextView
         android:id="@+id/bluetoothNewTextView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
         android:layout_below="@id/btnFindUnpairedDevices"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Nearby Devices"
-        android:textSize="24dp"
-        />
+        android:textSize="24dp" />
 
     <TextView
         android:id="@+id/bluetoothPairedTextView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
         android:layout_below="@id/lvNewDevices"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="Paired Devices"
-        android:textSize="24dp"
-        />
+        android:textSize="24dp" />
 
 </RelativeLayout>
