--- a/app/src/main/res/layout/activity_debug.xml
+++ b/app/src/main/res/layout/activity_debug.xml
@@ -79,9 +79,9 @@
 
     <Button
         android:id="@+id/sendBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="#87ceeb"
+        android:background="@drawable/control_button_bg"
         android:drawableLeft="@drawable/ic_send"
         android:padding="10dp"
         android:text="send"
