--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:id="@+id/findBluetoothButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#CAF1FC"
+        android:background="@drawable/btn_bg_auto"
         android:clickable="false"
         android:drawableLeft="@drawable/ic_bluetooth"
         android:padding="10dp"
@@ -56,7 +56,7 @@
         android:id="@+id/robotControls"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#FFE2D9"
+        android:background="@drawable/btn_bg_manual"
         android:drawableLeft="@drawable/ic_robot_controls"
         android:padding="10dp"
         android:text="Robot Controls"
@@ -72,7 +72,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:background="#DFEDD7"
+        android:background="@drawable/btn_green_bg"
         android:contextClickable="true"
         android:drawableLeft="@drawable/ic_functions"
         android:padding="10dp"
@@ -89,7 +89,7 @@
         android:id="@+id/debug"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#FFF0D9"
+        android:background="@drawable/btn_function_bg"
         android:contextClickable="true"
         android:drawableLeft="@drawable/ic_debug"
         android:padding="10dp"
